src/css/PlayingCard.css
/* Cpoyright © 2020 Matthew Heck. All rights reserved.

This file contains all css for the PlayingCard Component

Created before CIS 482 */

#playing-card {
  background: white;
  width: 107.25px;
  height: 150px;
  padding: 0;
  border-radius: 7%;
  border: solid gray 1px;
  overflow: hidden;
  position: absolute; /* prevents child elements from going outside of itself */
  font-family: 'Oswald', sans-serif;
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
  user-select: none;
}

#top-left-suit {
  position: absolute;
	top: 16%;
  left: 5%;
  pointer-events: none;
}

#top-left-value {
  position: absolute;
  top: -11%;
  left: 9%;
  font-weight: bold;
  font-size: 1em;
  pointer-events: none;
}

#bottom-right-suit {
  position: absolute;
	bottom: 16%;
	right: 5%;
  transform: rotate(180deg);
  pointer-events: none;
}

#bottom-right-value {
  position: absolute;
  bottom: -11%;
  right: 10%;
  font-weight: bold;
  font-size: 1em;
  transform: rotate(180deg);
  pointer-events: none;
}

#large-suit {
  position: absolute;
  top: 31%;
  left: 23%;
  pointer-events: none;
}

#back-image {
  position: absolute;
  top: 0%;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 7%;
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
  user-select: none;
}

.diamond {
  color: red;
}

.heart {
  color: red;
}

.spade {
  color: black;
}

.club {
  color: black;
}

#back-of-card {
  width: 107.25px;
  height: 150px;
  overflow: hidden;
  position: absolute; /* prevents child elements from going outside of itself */
  font-family: 'Oswald', sans-serif;
}

